wordpress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress-deployment
  name: wordpress-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress-deployment
  template:
    metadata:
      labels:
        kubernetes.io/app: wordpress-deployment
    spec:
      containers:
      - image: wordpress:php8.2
        name: wordpress
        port:
          - containerPort: 80
            name: wordpress-http
