wordpress/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  selector:
    kubernetes.io/app: wordpress-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: wordpress-http
